integrity constraints + bug fixes

--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -46,6 +46,8 @@
     <script src="../js/services/search-service.js"></script>
     <script src="../js/services/sort-service.js"></script>
     <script src="../js/services/filter-service.js"></script>
+    <script src="../js/services/link-constraint-service.js"></script>
+    <script src="../js/services/attribute-constraint-service.js"></script>
     <script src="../js/services/utils-service.js"></script>
 
     <script src="../js/factories/data-loader-factory.js"></script>
