--- a/tpl/algorithmic-dependencies.html
+++ b/tpl/algorithmic-dependencies.html
@@ -133,7 +133,7 @@
                 <div class="form-group">
                     <h4>Формула</h4>
                     <div class="input-group form-control">
-                        <input type="text" class="form-control" ng-disabled="!formulaEditing" placeholder="{{formulaEditing ? 'Введите формулу...' : 'Не указано...'}}" ng-model="dependency.formula" ng-keypress="onKeypress($event)">
+                        <input type="text" class="form-control" ng-disabled="!formulaEditing" placeholder="{{formulaEditing ? 'Введите формулу...' : 'Не указано...'}}" ng-model="dependency.formula">
                         <span class="input-group-btn">
                             <button class="btn btn-default" type="button" ng-hide="formulaEditing" ng-click="editFormula()">Изменить</button>
                             <button class="btn btn-default" type="button" ng-if="formulaEditing" ng-click="saveFormula()">Сохранить</button>
