--- a/tpl/integrity-constraints.html
+++ b/tpl/integrity-constraints.html
@@ -1,145 +1,87 @@
-<div  class="tile"  ng-controller="IntegrityConstraintsCtrl">
-    <!--Ограничения целостности-->
-    <div class="btn-group constraints-tabgroup" role="group" aria-label="...">
-        <button type="button" class="btn btn-default" ng-class="{active: isAttrs()}" ng-click="changeTab('attrs')">Атрибуты</button>
-        <button type="button" class="btn btn-default" ng-class="{active: !isAttrs()}" ng-click="changeTab('links')">Связи</button>
-    </div>
-    <div class="constraints-list" ng-show="isAttrs()">
-        <div class="panel panel-default constraintPanel " ng-repeat="constraint in constraints" width="80%" id="constraint_1_element">
-            <div class="panel-body">
-                <div class="btn-group">
-                    <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                        {{getSelectedObject(constraint.id)}}
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li ng-repeat="object in objects">
-                            <a href="#" ng-click="selectObject(constraint.id)">object</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="btn-group">
-                    <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                        Атрибут
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li ng-repeat="attr in getObject(constraint.id)">
-                            <a href="#" ng-click="selectObject(constraint.id)">object</a>
-                        </li>
-                    </ul>
-                </div>
-                <button type="button" class="btn btn-default btn-small button-delete-constraint" ng-click="removeConstraint(constraint.id)">
-                    <span class="badge">x</span>
-                </button>
-                <div class="constraint-content">
-                    <h5>Ограничение:</h5>
-                    <div class="constraint">
-                        <textarea class="constraint-text" id="constrBox" cols="" rows="5"></textarea>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <button class="btn btn-default center-block button-add-constraint" ng-click="addConstraint()">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-            Добавить ограничение
-        </button>
-    </div>
-    <div class="constraints-list" ng-show="tab==='links'">
-        <div class="panel panel-default constraintPanel " width="80%" id="constraint_1_element">
-            <div class="panel-body">
-                <div class="btn-group">
-                    <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                        Объект
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Пункт 1</a></li>
-                        <li><a href="#">Пункт 2</a></li>
-                        <li><a href="#">Пункт 3</a></li>
-                    </ul>
-                </div>
-                <div class="btn-group">
-                    <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
-                        Атрибут
-                        <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                        <li><a href="#">Пункт 1</a></li>
-                        <li><a href="#">Пункт 2</a></li>
-                        <li><a href="#">Пункт 3</a></li>
-                    </ul>
-                </div>
-                <button type="button" class="btn btn-default btn-small button-delete-constraint">
-                    <span class="badge">x</span>
-                </button>
-                <div class="constraint-content">
-                    <h5>Ограничение:</h5>
-                    <div class="constraint">
-                        <textarea class="constraint-text" id="constrBox" cols="" rows="5"></textarea>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <button class="btn btn-default center-block button-fixed">
-            <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-            Добавить ограничение
-        </button>
-    </div>
-</div>
-<div class="tile" ng-controller="InformationalRequirementsCtrl">
+<div class="tile" ng-controller="AttributeConstraintsCtrl">
     <div class="content-box">
         <div class="content-header">
             <div class="btn-group buttonsBar">
-                <button class="btn btn-default" ng-class="{ active: tab.name === 'search'}" ng-click="selectTab('search')"> Поиск </button>
-                <button class="btn btn-default" ng-class="{ active: tab.name === 'sort'}" ng-click="selectTab('sort')"> Сортировкa </button>
-                <button class="btn btn-default" ng-class="{ active: tab.name === 'filter'}" ng-click="selectTab('filter')"> Фильтрация </button>
+                <button class="btn btn-default" ng-class="{ active: tab.name === 'attribute'}" ng-click="selectTab('attribute')"> Атрибуты </button>
+                <button class="btn btn-default" ng-class="{ active: tab.name === 'link'}" ng-click="selectTab('link')"> Связи </button>
             </div>
         </div>
         <div class="box with-header">
             <div class="col-xs-1 panel panel-default namePanel">
                 <div class="panel-heading ">
-                    <h3 class="panel-title h2">{{tab.objectHeadText}}</h3>
+                    <h3 class="panel-title h2">{{tab.listHeadText}}</h3>
                 </div>
                 <div class="panel-body">
                     <div class="list-group objects-select">
-                        <a ng-repeat="r in tab.requirements" ng-class="{active: r.id == tab.requirement.id}" href="#" ng-click="selectRequirement(r)" class="list-group-item">{{r.object.name}}</a>
+                        <a ng-repeat="c in tab.constraints" ng-class="{active: c.id == tab.constraint.id}" href="#" ng-click="selectConstraint(c)" class="list-group-item">{{c.name}}</a>
                     </div>
                 </div>
-                <div class="panel-footer" ng-show="availableObjects.length">
-                    <div class="btn-group">
-                        <div class="dropup objDropup">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="" data-toggle="dropdown">
-                                <span>Добавить объект</span>
-                                <span class="caret"></span>
-                            </button>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                                <li role="presentation" ng-repeat="obj in availableObjects"><a ng-click="addRequirement(obj)" role="menuitem" tabindex="-1" href="#">{{obj.name}}</a></li>
-                            </ul>
-                        </div>
+                <div class="panel-footer">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Название..." ng-model="tab.constraintName" ng-keypress="onKeypress($event)">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default" type="button" ng-click="addConstraint()">+</button>
+                        </span>
                     </div>
                 </div>
             </div>
-            <div class="panel panel-default detailsPanel ">
+            <div class="panel panel-default detailsPanel">
                 <div class="panel-heading ">
-                    <h3 class="panel-title">{{tab.attrsHeadText}}</h3>
+                    <h3 class="panel-title">{{tab.detailsHeadText}}</h3>
                 </div>
-                <div class="panel-body" ng-show="tab.requirement">
-                    <ul class="list-group">
-                        <li ng-repeat="attr in tab.requirement.object.attrs" class="list-group-item">
-                            {{attr.name}}
-                            <span ng-click="removeAttr(attr)" class="badge">x</span>
-                        </li>
-                    </ul>
-                    <div class="btn-group" ng-show="availableAttrs.length">
-                        <div class="dropdown attrDropup">
-                            <button class="btn btn-default dropdown-toggle" type="button" id="" data-toggle="dropdown">
-                                <span>Добавить атрибут</span>
+                <div class="panel-body" ng-show="tab.constraint">
+                    <div class="form-group" ng-show="tab.name === 'attribute'">
+                        <div class="btn-group">
+                            <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                {{tab.constraint.object ? tab.constraint.object.name : 'Выберите объект'}}
                                 <span class="caret"></span>
                             </button>
-                            <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-                                <li role="presentation" ng-repeat="attr in availableAttrs"><a role="menuitem" ng-click="addAttr(attr)" tabindex="-1" href="#">{{attr.name}}</a></li>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" ng-repeat="object in objects" ng-click="selectObject(object)">{{object.name}}</a></li>
                             </ul>
+                        </div>
+                        <div class="btn-group" ng-show="tab.constraint.object">
+                            <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                {{tab.constraint.object.attr ? tab.constraint.object.attr.name : 'Выберите атрибут'}}
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" ng-repeat="attr in getAttrs(tab.constraint.object)" ng-click="selectAttr(attr)">{{attr.name}}</a></li>
+                            </ul>
+                        </div>
+                        <button type="button" class="btn btn-default btn-small button-delete-constraint">
+                            <span class="badge">x</span>
+                        </button>
+                    </div>
+                    <div class="form-group" ng-show="tab.name === 'link'">
+                        <div class="btn-group">
+                            <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                {{tab.constraint.firstObject ? tab.constraint.firstObject.name : 'Выберите объект'}}
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" ng-repeat="object in objects" ng-click="selectFirstObject(object)">{{object.name}}</a></li>
+                            </ul>
+                        </div>
+                        <div class="btn-group" ng-show="tab.constraint.firstObject">
+                            <button type="button" data-toggle="dropdown" class="btn btn-default dropdown-toggle">
+                                {{tab.constraint.secondObject ? tab.constraint.secondObject.name : 'Выберите объект'}}
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><a href="#" ng-repeat="object in objects" ng-click="selectSecondObject(object)">{{object.name}}</a></li>
+                            </ul>
+                        </div>
+                        <button type="button" class="btn btn-default btn-small button-delete-constraint">
+                            <span class="badge">x</span>
+                        </button>
+                    </div>
+                    <div class="constraint-content">
+                        <h5>Ограничение:</h5>
+                        <div class="constraint">
+                            <textarea class="constraint-text" id="constrBox" cols="" placeholder="{{tab.changingDescription ? 'Введите описание...' : 'Нет описания...'}}" ng-disabled="!tab.changingDescription" rows="5" ng-model="tab.constraint.description"></textarea>
+                            <button class="btn btn-default button-action-constraint" ng-hide="tab.changingDescription" ng-click="changeDescription()">Изменить</button>
+                            <button class="btn btn-default button-action-constraint" ng-show="tab.changingDescription" ng-click="saveDescription()">Сохранить</button>
                         </div>
                     </div>
                 </div>
