--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -1,149 +1,181 @@
 <html ng-app="db" lang="ru">
 
 <head>
-<meta charset="utf-8">
-<meta lang="ru">
-<meta name="description" content="A tool for studying DataBases.">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" type="text/css"
-	href="css/lib/pure-release-0.6.0/pure-nr.css">
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-<link rel="stylesheet" type="text/css"
-	href="css/lib/font-awesome-4.4.0/css/font-awesome.css">
-<link rel="stylesheet" type="text/css" href="css/upside-menu.css">
-<script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
-<script type="text/javascript" src="js/lib/angular.js"></script>
-<script type="text/javascript" src="js/app.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+    <meta charset="utf-8">
+    <meta lang="ru">
+    <meta name="description" content="A tool for studying DataBases.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="css/lib/pure-release-0.6.0/pure-nr.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/lib/font-awesome-4.4.0/css/font-awesome.css">
+    <link rel="stylesheet" type="text/css" href="css/upside-menu.css">
+    <link rel="stylesheet" type="text/css" href="css/workenv.css">
+    <link rel="stylesheet" type="text/css" href="css/diagram.css">
+    <link rel="stylesheet" type="text/css" href="css/figures.css">
+    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap.css.map">
+    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap-theme.css.map">
+    <link rel="stylesheet" type="text/css" href="css/lib/joint/joint.css">
+    <script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="js/lib/angular.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
 
-<!--Online links:
+    <!--Online links:
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>-->
 
-<title>Editing &ndash; Student project &ndash; DataBases</title>
-<script type="text/javascript">
-	$
-			.ajax({
+    <script src="js/lib/bootstrap.min.js" type="text/javascript"></script>
+    <script src="js/lib/joint.js" type="text/javascript"></script>
 
-				type : "POST",
-				url : "../DreamTeamProj/project/integrity_constraints/links/delete",
-				data : {
-					"id":2
-				},
-				dataType : "json",
-				success : function(data) {
-					console.log(JSON.stringify(data));
-					console.log(data);
-				}
-			});
-</script>
+    <script src="js/services/diagram-service.js"></script>
+    <script src="js/services/figures-service.js"></script>
+    <script src="js/services/links-service.js"></script>
+    <script src="js/services/configure-diagram-service.js"></script>
+    <script src="js/services/setup-drag-and-drop-service.js"></script>
+
+    <script src="js/services/algorithmic-dependency-service.js"></script>
+    <script src="js/services/object-service.js"></script>
+    <script src="js/services/report-service.js"></script>
+    <script src="js/services/statistic-service.js"></script>
+    <script src="js/services/search-service.js"></script>
+    <script src="js/services/sort-service.js"></script>
+    <script src="js/services/filter-service.js"></script>
+    <script src="js/services/link-constraint-service.js"></script>
+    <script src="js/services/attribute-constraint-service.js"></script>
+    <script src="js/services/utils-service.js"></script>
+
+    <script src="js/factories/data-loader-factory.js"></script>
+    <script src="js/factories/common-controller-factory.js"></script>
+
+    <script src="js/directives/visible-directive.js"></script>
+
+    <script src="js/controllers/workenv-controller.js" type="text/javascript"></script>
+    <script src="js/controllers/er-controller.js" type="text/javascript"></script>
+    <script src="js/controllers/object-relations-controller.js "></script>
+    <script src="js/controllers/use-case-controller.js "></script>
+    <script src="js/controllers/informational-requirements-controller.js"></script>
+    <script src="js/controllers/statistics-controller.js"></script>
+    <script src="js/controllers/reports-controller.js"></script>
+    <script src="js/controllers/integrity-constraints-controller.js"></script>
+    <script src="js/controllers/algorithmic-dependencies-controller.js"></script>
+
+    <title>Editing &ndash; Student project &ndash; DataBases</title>
 </head>
 
-<body ng-controller="guicontroller" data-ng-init="init()"
-	ng-click="hideAttrs();">
-	<div id="background">
-		<div id="header" class="header">
-			<div class="project-menu">
-				<div id='cssmenu'>
-					<ul>
-						<li class='active has-sub'><a href='#'><span>Menu</span></a>
-							<ul>
-								<li class=''><a href='#' class="first"><span>Сохранить</span></a>
-									<!--<ul>
-                                    <li><a href='#'><span>...</span></a></li>
-                                    <li class='last'><a href='#'><span>...</span></a></li>
-                                </ul>--></li>
-								<li class=''><a href='#' class="second"><span>Перейти
-											к другому проекту</span></a> <!--<ul>
-                                    <li><a href='#'><span>...</span></a></li>
-                                    <li class='last'><a href='#'><span>...</span></a></li>
-                                </ul>--></li>
-							</ul></li>
-					</ul>
-				</div>
-			</div>
-			<div class="user-block">{{ user.FullName }}</div>
-		</div>
-		<div id="main" class="main">
-			<div class="left-side">
-				<div class="pure-menu custom-restricted-width">
-					<ul class="pure-menu-list">
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Редактировать
-								<br> документ
-						</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Объекты
-								и атрибуты</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Use-Case</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Relations</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">ER-модель</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Информационные
-								<br> потребности
-						</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Статистики</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Отчеты</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Алгоритмические
-								<br> зависимости
-						</a></li>
-						<li class="pure-menu-item"><a href="#" class="pure-menu-link">Ограничения
-								<br> целостности
-						</a></li>
-					</ul>
-				</div>
-				<hr class="divider"></hr>
-				<!--TODO-->
-				<div class="oe">
-					<div class="table-oa">
-						<div class="objects-tr table-header">
-							<div class="obj-name-td">Объекты:</div>
-							<div class="attr-count-td">...</div>
-						</div>
-						<div class="tbody-div">
-							<div class="objects-tr" ng-repeat="object in objects"
-								ng-click="showAttrsInDiv(object); $event.stopPropagation();">
-								<div class="obj-name-td">{{object.Name}}</div>
-								<div class="attr-count-td">{{object.AttrCount}}</div>
-							</div>
-						</div>
-					</div>
-					<div class="add-obj-input" id="addObjInput">
-						<form class="pure-form add-form">
-							<input type="text" placeholder="Object name">
-							<button type="button" class="button-success pure-button">
-								<i class="fa fa-plus"></i> Add
-							</button>
-						</form>
-					</div>
-				</div>
-				<div class="attr-box" ng-click="$event.stopPropagation();">
-					<div class="table-attr">
-						<div class="objects-tr table-header">
-							<div class="elem-name-td">Атрибуты:</div>
-						</div>
-						<!--TODO-->
-						<div class="tbody-div">
-							<div class="objects-tr"
-								ng-repeat="attribute in selected.attributes">
-								<div class="elem-name-td">{{attribute.Name}}</div>
-							</div>
-						</div>
-					</div>
-					<div class="add-obj-input" id="addElemInput">
-						<form class="pure-form add-form">
-							<input type="text" placeholder="Element name">
-							<button type="button" class="button-success pure-button">
-								<i class="fa fa-plus"></i> Add
-							</button>
-						</form>
-					</div>
-				</div>
-			</div>
-			<div class="extend-box"></div>
-		</div>
-		<div id="footer" class="footer">
-			<p class="legal-copyright">© 2014 DreamTeam! All rights reserved.
-			</p>
-		</div>
-	</div>
+<body ng-controller="guicontroller" data-ng-init="init()" ng-click="hideAttrs();">
+    <div id="background">
+        <div id="header" class="header">
+            <div class="project-menu">
+                <div id='cssmenu'>
+                    <ul>
+                        <li class='active has-sub'><a href='#'><span>Menu</span></a>
+                            <ul>
+                                <li class=''><a href='#' class="first"><span>Сохранить</span></a>
+                                </li>
+                                <li class=''><a href='#' class="second"><span>Перейти к другому проекту</span></a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="user-block">
+                <div id='cssmenu'>
+                    <ul>
+                        <li class='active'>
+                            <a href='#'><span>{{ user.FullName }}</span></a>
+                            <ul>
+                                <li class=''><a href='#' class="first"><span>Редактировать информацию</span></a>
+                                </li>
+                                <li class=''><a href='#' class="second"><span>Выход</span></a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div id="main" class="main">
+            <div class="left-side">
+                <div class="pure-menu custom-restricted-width">
+                    <ul class="pure-menu-list">
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Редактировать <br> документ</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link">Объекты и атрибуты</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" ng-click="tab = 3">Use-Case</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" ng-click="tab = 4">Relations</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" ng-click="tab = 5">ER-модель</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" ng-click="tab = 6">Информационные <br> потребности</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" ng-click="tab = 7">Статистики</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" ng-click="tab = 8">Отчеты</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" ng-click="tab = 9">Алгоритмические <br> зависимости</a></li>
+                        <li class="pure-menu-item"><a href="#" class="pure-menu-link" ng-click="tab = 10">Ограничения <br> целостности</a></li>
+                    </ul>
+                </div>
+                <hr class="divider"></hr>
+                <!--TODO-->
+                <div class="oe">
+                    <div class="table-oa">
+                        <div class="objects-tr table-header">
+                            <div class="obj-name-td">Объекты:</div>
+                            <div class="attr-count-td">...</div>
+                        </div>
+                        <div class="tbody-div">
+                            <div class="objects-tr" ng-repeat="object in objects" ng-click="showAttrsInDiv(object); $event.stopPropagation();">
+                                <div class="obj-name-td">{{object.Name}}</div>
+                                <div class="attr-count-td">{{object.AttrCount}}</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="add-obj-input" id="addObjInput">
+                        <form class="pure-form add-form">
+                            <input type="text" placeholder="Object name">
+                            <button type="button" class="button-success pure-button">
+                                <i class="fa fa-plus"></i> Add
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                <div class="attr-box" ng-click="$event.stopPropagation();">
+                    <div class="table-attr">
+                        <div class="objects-tr table-header">
+                            <div class="elem-name-td">Атрибуты:</div>
+                        </div>
+                        <!--TODO-->
+                        <div class="tbody-div">
+                            <div class="objects-tr" ng-repeat="attribute in selected.attributes">
+                                <div class="elem-name-td">{{attribute.Name}}</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="add-obj-input" id="addElemInput">
+                        <form class="pure-form add-form">
+                            <input type="text" placeholder="Element name">
+                            <button type="button" class="button-success pure-button">
+                                <i class="fa fa-plus"></i> Add
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <div class="extend-box">
+                <div visible="tab === 3" class="tile-container" ng-include="'tpl/use-case.html'"></div>
+                <div visible="tab === 4" class="tile-container" ng-include="'tpl/object-relations.html'"></div>
+                <div visible="tab === 5" class="tile-container" ng-include="'tpl/er.html'"></div>
+                <div visible="tab === 6" class="tile-container" ng-include="'tpl/informational-requirements.html'"></div>
+                <div visible="tab === 7" class="tile-container" ng-include="'tpl/statistics.html'"></div>
+                <div visible="tab === 8" class="tile-container" ng-include="'tpl/reports.html'"></div>
+                <div visible="tab === 9" class="tile-container" ng-include="'tpl/algorithmic-dependencies.html'"></div>
+                <div visible="tab === 10" class="tile-container" ng-include="'tpl/integrity-constraints.html'"></div>
+            </div>
+        </div>
+        <div id="footer" class="footer">
+            <p class="legal-copyright">
+                © 2014 DreamTeam! All rights reserved.
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
