real data connection

--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" type="text/css" href="css/figures.css">
     <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap.css.map">
-    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap-theme.min.css">
-    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap-theme.css.map">
+    <!-- <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap-theme.min.css">
+    <link rel="stylesheet" type="text/css" href="css/lib/bootstrap/bootstrap-theme.css.map"> -->
     <link rel="stylesheet" type="text/css" href="css/lib/joint/joint.css">
     <script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="js/lib/angular.js"></script>
