--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -61,7 +61,7 @@
     <script src="js/controllers/integrity-constraints-controller.js"></script>
     <script src="js/controllers/algorithmic-dependencies-controller.js"></script>
 
-    <title>Editing &ndash; Student project &ndash; DataBases</title>
+    <title>Document &ndash; Student project &ndash; DataBases</title>
 </head>
 
 <body ng-controller="guicontroller" data-ng-init="init()" ng-click="hideAttrs();">
@@ -74,7 +74,7 @@
                             <ul>
                                 <li class=''><a href='#' class="first"><span>Сохранить</span></a>
                                 </li>
-                                <li class=''><a href='#' class="second"><span>Перейти к другому проекту</span></a>
+                                <li class=''><a href='dashboard.html#projects' class="second"><span>Перейти к другому проекту</span></a>
                                 </li>
                             </ul>
                         </li>
@@ -87,7 +87,7 @@
                         <li class='active'>
                             <a href='#'><span>{{ user.FullName }}</span></a>
                             <ul>
-                                <li class=''><a href='#' class="first"><span>Редактировать информацию</span></a>
+                                <li class=''><a href='dashboard.html#user' class="first"><span>Редактировать информацию</span></a>
                                 </li>
                                 <li class=''><a href='#' class="second"><span>Выход</span></a>
                                 </li>
@@ -122,7 +122,7 @@
                             <div class="attr-count-td">...</div>
                         </div>
                         <div class="tbody-div">
-                            <div class="objects-tr" ng-repeat="object in objects" ng-click="showAttrsInDiv(object); $event.stopPropagation();">
+                            <div class="objects-tr pointer" ng-repeat="object in objects" ng-click="showAttrsInDiv(object); $event.stopPropagation();">
                                 <div class="obj-name-td">{{object.Name}}</div>
                                 <div class="attr-count-td">{{object.AttrCount}}</div>
                             </div>
@@ -144,7 +144,7 @@
                         </div>
                         <!--TODO-->
                         <div class="tbody-div">
-                            <div class="objects-tr" ng-repeat="attribute in selected.attributes">
+                            <div class="objects-tr pointer" ng-repeat="attribute in selected.attributes">
                                 <div class="elem-name-td">{{attribute.Name}}</div>
                             </div>
                         </div>
