some changes in dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -30,8 +30,8 @@
             <div class="left-dash-side">
                 <div class="pure-menu custom-restricted-width">
                     <ul class="pure-menu-list">
-                        <li class="pure-menu-item"><a href="#projects" class="pure-menu-link" ng-click="setPage('projects');">Управление проектами</a></li>
-                        <li class="pure-menu-item"><a href="#user" class="pure-menu-link" ng-click="setPage('profile');">Информация студента</a></li>
+                        <li class="pure-menu-item"><a href="" class="pure-menu-link" ng-click="setPage('projects');">Управление проектами</a></li>
+                        <li class="pure-menu-item"><a href="" class="pure-menu-link" ng-click="setPage('profile');">Информация студента</a></li>
                     </ul>
                 </div>
                 <hr class="divider"></hr>
