--- a/login/index.html
+++ b/login/index.html
@@ -27,15 +27,10 @@
         </script>
         <div id="login-panel">
             <div id="login-header">
-                <h1 class="text-center">
-			APPNAME
-		</h1>
+                <h1 class="text-center">APPNAME</h1>
                 <hr/>
                 <h4 class="text-center">Log In</h4>
                 <hr/>
-                <div id="error" class="hide alert alert-danger">
-                </div>
-
             </div>
             <div class="front panel">
                 <form action="#" id="login_form" method="post">
