--- a/login/index.html
+++ b/login/index.html
@@ -13,8 +13,11 @@
     <title>LogIn &ndash; Student project &ndash; DataBases</title>
     <link href="css/admin.css" rel="stylesheet" type="text/css" media="all" />
     <link href="../css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/ladda.css" rel="stylesheet" type="text/css" media="all" />
     <script type="text/javascript" src="../js/lib/jquery-2.1.4.js"></script>
     <script type="text/javascript" src="js/admin/jquery.validate.js"></script>
+    <script type="text/javascript" src="js/admin/ladda.js"></script>
+    <script type="text/javascript" src="js/admin/spin.js"></script>
     <script type="text/javascript" src="js/admin/login.js"></script>
 
 </head>
@@ -58,7 +61,6 @@
 							</span>
                         </button>
                     </div>
-                    <input type="hidden" name="redirect" id="redirect" value="&token=c5e0b3c3e4725d312327bde789d7604c" />
                 </form>
             </div>
         </div>
