--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -52,6 +52,8 @@
 
     <script src="js/directives/visible-directive.js"></script>
 
+    <script src="js/controllers/dashboard-controller.js" type="text/javascript"></script>
+    <script src="js/controllers/objects-attrs-controller.js" type="text/javascript"></script>
     <script src="js/controllers/workenv-controller.js" type="text/javascript"></script>
     <script src="js/controllers/er-controller.js" type="text/javascript"></script>
     <script src="js/controllers/object-relations-controller.js "></script>
@@ -65,7 +67,7 @@
     <title>Document &ndash; Student project &ndash; DataBases</title>
 </head>
 
-<body ng-controller="guicontroller" data-ng-init="init()" ng-click="hideAttrs();">
+<body ng-controller="DashboardCtrl" data-ng-init="init()" ng-click="hideAttrs();">
     <div id="background">
         <div id="header" class="header">
             <div class="project-menu">
@@ -102,7 +104,7 @@
             <div class="left-side">
                 <div class="pure-menu custom-restricted-width">
                     <ul class="pure-menu-list">
-                        <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 1}"><a href="#" class="pure-menu-link" ng-click="tab = 1">Редактировать <br> документ</a></li>
+                        <!-- <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 1}"><a href="#" class="pure-menu-link" ng-click="tab = 1">Редактировать <br> документ</a></li> -->
                         <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 2}"><a href="#" class="pure-menu-link" ng-click="tab = 2">Объекты и атрибуты</a></li>
                         <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 3}"><a href="#" class="pure-menu-link" ng-click="tab = 3">Use-Case</a></li>
                         <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 4}"><a href="#" class="pure-menu-link" ng-click="tab = 4">Relations</a></li>
@@ -114,54 +116,12 @@
                         <li class="pure-menu-item" ng-class="{'pure-menu-selected': tab === 10}"><a href="#" class="pure-menu-link" ng-click="tab = 10">Ограничения <br> целостности</a></li>
                     </ul>
                 </div>
-                <hr class="divider"></hr>
+                <!-- <hr class="divider"></hr> -->
                 <!--TODO-->
-                <div class="oe">
-                    <div class="table-oa">
-                        <div class="objects-tr table-header">
-                            <div class="obj-name-td">Объекты:</div>
-                            <div class="attr-count-td">...</div>
-                        </div>
-                        <div class="tbody-div">
-                            <div class="objects-tr pointer" ng-repeat="object in objects" ng-click="showAttrsInDiv(object); $event.stopPropagation();">
-                                <div class="obj-name-td">{{object.Name}}</div>
-                                <div class="attr-count-td">{{object.AttrCount}}</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="add-obj-input" id="addObjInput">
-                        <form class="pure-form add-form">
-                            <input type="text" placeholder="Object name">
-                            <button type="button" class="button-success pure-button">
-                                <i class="fa fa-plus"></i> Add
-                            </button>
-                        </form>
-                    </div>
-                </div>
-                <div class="attr-box" ng-click="$event.stopPropagation();">
-                    <div class="table-attr">
-                        <div class="objects-tr table-header">
-                            <div class="elem-name-td">Атрибуты:</div>
-                        </div>
-                        <!--TODO-->
-                        <div class="tbody-div">
-                            <div class="objects-tr pointer" ng-repeat="attribute in selected.attributes">
-                                <div class="elem-name-td">{{attribute.Name}}</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="add-obj-input" id="addElemInput">
-                        <form class="pure-form add-form">
-                            <input type="text" placeholder="Element name">
-                            <button type="button" class="button-success pure-button">
-                                <i class="fa fa-plus"></i> Add
-                            </button>
-                        </form>
-                    </div>
-                </div>
+                <div class="oe" ng-include="'tpl/objects-attrs.html'"></div>
             </div>
             <div class="extend-box">
-                <div visible="tab === 1" class="tile-container" ng-include="'tpl/objects-attributes.html'"></div>
+                <!-- <div visible="tab === 1" class="tile-container" ng-include="'tpl/objects-attributes.html'"></div> -->
                 <div visible="tab === 2" class="tile-container" ng-include="'tpl/document.html'"></div>
                 <div visible="tab === 3" class="tile-container" ng-include="'tpl/use-case.html'"></div>
                 <div visible="tab === 4" class="tile-container" ng-include="'tpl/object-relations.html'"></div>
