fixed pictures posting + started implementring document

--- a/DreamTeamProj/WebContent/tpl/object-relations.html
+++ b/DreamTeamProj/WebContent/tpl/object-relations.html
@@ -3,7 +3,7 @@
         <div class="panel-heading">
             <h3 class="panel-title">Взаимодействия объектов</h3>
         </div>
-        <div class="figuresBar panel panel-default">
+        <div class="toolbox panel panel-default">
             <input type="button" value="Объект" class="btn btn-default object">
         </div>
         <div id="object-relations-model" class="panel-body paper" ng-click="closeObjectOptions()"></div>
