--- a/DreamTeamProj/WebContent/tpl/use-case.html
+++ b/DreamTeamProj/WebContent/tpl/use-case.html
@@ -3,7 +3,7 @@
         <div class="panel-heading">
             <h3 class="panel-title">Функциональная модель</h3>
         </div>
-        <div id="functional-tools" class="figuresBar panel panel-default">
+        <div id="functional-tools" class="toolbox panel panel-default">
             <input type="button" value="Актер" class="btn btn-default actor">
             <input type="button" value="Сервис" class="btn btn-default service">
         </div>
