--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -29,7 +29,9 @@
     <script src="js/lib/joint.js" type="text/javascript"></script>
     <script src="js/lib/html2canvas.js" type="text/javascript"></script>
     <script src="js/lib/canvg.js" type="text/javascript"></script>
+    <script src="js/lib/bootstrap-filestyle.js" type="text/javascript"></script>
 
+    <script src="js/services/config.js"></script>
     <script src="js/services/diagram-service.js"></script>
     <script src="js/services/figures-service.js"></script>
     <script src="js/services/links-service.js"></script>
@@ -52,9 +54,11 @@
     <script src="js/factories/common-controller-factory.js"></script>
 
     <script src="js/directives/visible-directive.js"></script>
+    <script src="js/directives/fileread-directive.js"></script>
 
     <script src="js/controllers/dashboard-controller.js" type="text/javascript"></script>
     <script src="js/controllers/nav-controller.js" type="text/javascript"></script>
+    <script src="js/controllers/document-controller.js" type="text/javascript"></script>
     <script src="js/controllers/objects-attrs-controller.js" type="text/javascript"></script>
     <script src="js/controllers/workenv-controller.js" type="text/javascript"></script>
     <script src="js/controllers/er-controller.js" type="text/javascript"></script>
