--- a/DreamTeamProj/WebContent/tpl/er.html
+++ b/DreamTeamProj/WebContent/tpl/er.html
@@ -3,7 +3,7 @@
         <div class="panel-heading">
             <h3 class="panel-title">ER диаграмма</h3>
         </div>
-        <div class="figuresBar panel panel-default">
+        <div class="toolbox panel panel-default">
             <input type="button" value="Сущность" class="btn btn-default entity">
             <input type="button" value="Атрибут" class="btn btn-default attribute">
             <input type="button" value="Ассоциация" class="btn btn-default association">
