--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
     <!--Online links:
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>-->
-
     <script src="js/lib/bootstrap.min.js" type="text/javascript"></script>
     <script src="js/lib/joint.js" type="text/javascript"></script>
+    <script src="js/lib/bootstrap-filestyle.js" type="text/javascript"></script>
 
+    <script src="js/services/config.js"></script>
     <script src="js/services/diagram-service.js"></script>
     <script src="js/services/figures-service.js"></script>
     <script src="js/services/links-service.js"></script>
