--- a/DreamTeamProj/WebContent/modals/modals.html
+++ b/DreamTeamProj/WebContent/modals/modals.html
@@ -1,3 +1,4 @@
-<div ng-modals ng-click="handleClick()" controller="ModalsCtrl">
-    <div ng-include="modals/diagram-options-modal.html"></div>
+<div ng-controller="ModalsCtrl">
+    <div ng-include="'modals/generate-doc-modal.html'"></div>
+    <div ng-include="'modals/upload-doc-modal.html'"></div>
 </div>
