--- a/DreamTeamProj/WebContent/index.html
+++ b/DreamTeamProj/WebContent/index.html
@@ -80,7 +80,7 @@
 
 <body ng-controller="DashboardCtrl" data-ng-init="init()" ng-click="hideAttrs();">
     <div id="background">
-        <div ng-include="'tpl/nav.html'"></div>
+        <div ng-include="'tpl/nav.html'" class="header"></div>
         <div id="main" class="main">
             <div class="left-side">
                 <div class="pure-menu custom-restricted-width">
