--- a/DreamTeamProj/WebContent/login.html
+++ b/DreamTeamProj/WebContent/login.html
@@ -8,17 +8,17 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>LogIn &ndash; Student project &ndash; DataBases</title>
-    <link href="css/admin.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="../css/lib/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="css/ladda.css" rel="stylesheet" type="text/css" media="all" />
-    <script type="text/javascript" src="../js/lib/jquery-2.1.4.js"></script>
-    <script type="text/javascript" src="js/admin/jquery.validate.js"></script>
-    <script type="text/javascript" src="js/admin/ladda.js"></script>
-    <script type="text/javascript" src="js/admin/spin.js"></script>
-    <script type="text/javascript" src="js/admin/login.js"></script>
+    <title>Login &ndash; Student project &ndash; DataBases</title>
+    <link href="css/login.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/lib/bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/lib/font-awesome-4.4.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/lib/ladda.css" rel="stylesheet" type="text/css" media="all" />
+    <script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.validate.js"></script>
+    <script type="text/javascript" src="js/lib/ladda.js"></script>
+    <script type="text/javascript" src="js/lib/spin.js"></script>
+    <script type="text/javascript" src="js/login.js"></script>
 
 </head>
 
@@ -40,7 +40,7 @@
                     <div class="form-group">
                         <label class="control-label" for="email">Адрес E-mail:</label>
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="icon-envelope"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
                             <input name="email" type="text" id="email" class="form-control" value="" autofocus="autofocus" tabindex="1" placeholder="test@example.com" />
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                             Пароль:
                         </label>
                         <div class="input-group">
-                            <span class="input-group-addon"><i class="icon-key"></i></span>
+                            <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
                             <input name="passwd" type="password" id="passwd" class="form-control" value="" tabindex="2" placeholder="Пароль" />
                         </div>
                     </div>
