поправил верстку, добавил пояснение к троеточию

--- a/DreamTeamProj/WebContent/settings.html
+++ b/DreamTeamProj/WebContent/settings.html
@@ -4,7 +4,6 @@
     <meta charset="utf-8">
     <meta lang="ru">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="css/lib/pure-release-0.6.0/pure-nr.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="css/lib/font-awesome-4.4.0/css/font-awesome.css">
     <script type="text/javascript" src="js/lib/jquery-2.1.4.js"></script>
@@ -21,7 +20,7 @@
 
 <body ng-controller="SettingsCtrl" data-ng-init="init()">
     <div id="background">
-        <div id="header" class="header">
+        <div id="header" class="header settings-header">
             <div class="user-name-logout-block cursor-default">
                 {{ user.FullName }}
             </div>
@@ -46,7 +45,7 @@
         </div>
         <div id="footer" class="footer">
             <p class="legal-copyright">
-                © 2014 DreamTeam! All rights reserved.
+                © 2015 DreamTeam! All rights reserved.
             </p>
         </div>
     </div>
