--- a/DreamTeamProj/WebContent/tpl/objects-attrs.html
+++ b/DreamTeamProj/WebContent/tpl/objects-attrs.html
@@ -3,7 +3,7 @@
         <!-- <div class="table-oa"> -->
         <div class="objects-tr table-header panel-heading">
             <h3 class="obj-name-td panel-title">Объекты:</h3>
-            <h3 class="attr-count-td panel-title">...</h3>
+            <h3 class="attr-count-td panel-title" title="Количество атрибутов в объекте">...</h3>
         </div>
         <div class="tbody-div panel-body">
             <!-- <div class="objects-tr pointer" ng-repeat="obj in objects" ng-class="{'selected': obj.id === object.id}" ng-click="selectObject(obj); $event.stopPropagation();">
